[gd_scene load_steps=4 format=3 uid="uid://cnkvwbdkdckco"]

[ext_resource type="Script" path="res://Messenger5.gd" id="1_dswpx"]
[ext_resource type="Script" path="res://Button2.gd" id="2_2co17"]
[ext_resource type="Script" path="res://Label.gd" id="3_rmmtv"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dswpx")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 95.0
offset_bottom = 95.0
script = ExtResource("2_2co17")

[node name="Label" type="Control" parent="Button"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = 21.0
offset_top = 1.0
offset_right = 61.0
offset_bottom = 41.0
mouse_filter = 1
script = ExtResource("3_rmmtv")

[node name="Description2" type="RichTextLabel" parent="Button/Label"]
visible = false
z_index = 1
clip_contents = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.325
anchor_top = 0.65
anchor_right = 3.825
anchor_bottom = 3.15
offset_left = -52.0
offset_top = 28.0
offset_right = 48.0
offset_bottom = 28.0
scale = Vector2(1, 1.00828)
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 11
text = "fnoifnwiofnwiofnewionfweoinfoiewnionvionvoidnvie"

[node name="Name2" type="RichTextLabel" parent="Button/Label"]
visible = false
custom_minimum_size = Vector2(300, 10)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.64
anchor_top = 0.34
anchor_right = 0.64
anchor_bottom = 0.34
offset_left = -26.0
offset_top = 14.0
offset_right = 13.0
offset_bottom = 53.0
scale = Vector2(0.958513, 0.969808)
mouse_filter = 1
text = "Watermelon"

[node name="Counter" type="RichTextLabel" parent="."]
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="mouse_entered" from="Button" to="Button/Label" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button/Label" method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
